# cli-file-sync

./: .gitignore  Cargo.toml  README.md  assets.json  commands.txt  failed_downloads.json  sample-assets.json  todo.md
.github/workflows/: release.yml
src/: assets.rs  config.rs  docs.rs  downloader.rs  main.rs  reporting.rs  schema.rs  sync.rs
