[package]
name = "cli-file-sync"
version = "0.1.0"
edition = "2021"
authors = ["Althaf"]
description = "A CLI tool for syncing files based on JSON configuration"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
directories = "5.0"
sha2 = "0.10"
base64 = "0.21"
csv = "1.3"
image = "0.24"
mime_guess = "2.0"
infer = "0.15"
url = "2.5.0"
dirs = "5.0.1"
